# python-package-cookiecutter

./: README.md  cookiecutter.json  setup.cfg
{{cookiecutter.project_slug}}/: .gitignore  AUTHORS.md  COPYRIGHT  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  setup.cfg
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_package}}/: __init__.py  version.py
