[metadata]
name = python-package-cookiecutter
version = 0.1.0
author = Holger Joukl
description = Basic opinionated cookiecutter template for a Python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hjoukl/python-package-cookiecutter
project_urls =
    Documentation = https://github.com/hjoukl/python-package-cookiecutter
    Source Code = https://github.com/hjoukl/python-package-cookiecutter
    Bug Tracker = https://github.com/hjoukl/python-package-cookiecutter/issues
keywords = cookiecutter template package
license = License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
classifiers =
    Operating System :: OS Independent
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
[options]
python_requires = >=3.6
