{%- set license_classifiers = {
    'Mozilla Public License 2.0': 'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
} %}
[metadata]
name = {{ cookiecutter.project_slug }}
version = attr: {{ cookiecutter.project_package }}.version.__version__
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = {{ cookiecutter.project_url }}
project_urls =
    Bug Tracker = {{ cookiecutter.project_issues_url }}
    Documentation = {{ cookiecutter.project_documentation_url }}
    Source Code = {{ cookiecutter.project_url }}
keywords = 
{%- if cookiecutter.license in license_classifiers %}
license = {{ license_classifiers[cookiecutter.license] }}
{%- endif %}
classifiers =
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent
{%- if cookiecutter.license in license_classifiers %}
    {{ license_classifiers[cookiecutter.license] }}
{%- endif %}
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    = src
include_package_data = true
zip_safe = false
python_requires = >=3.6
install_requires =

[options.packages.find]
where = src

[options.entry_points]
#console_scripts =
#    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_package }}.cli:main
